// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="direction-column first-shape- last-shape- first-size- last-size- sc-dxgOiQ kTRKYm"
  >
    <div
      inGroup={true}
    />
  </div>
</span>
`;

exports[`When using snapshots Should render with the direction prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="direction-column first-shape- last-shape- first-size- last-size- sc-dxgOiQ kTRKYm"
  >
    <div
      inGroup={true}
    />
  </div>
</span>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="direction-column first-shape-square last-shape-square first-size- last-size- sc-dxgOiQ kTRKYm"
  >
    <div
      inGroup={true}
      shape="square"
    />
  </div>
</span>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="direction-column first-shape- last-shape- first-size-xs last-size-xs sc-dxgOiQ pADMK"
  >
    <div
      inGroup={true}
      size="xs"
    />
  </div>
</span>
`;
